# BusinessObjects

./: .gitignore  Pipfile  README.md  analysis.py  analysis_bo.py  bo_creation.py  eval_tpch.py  evaluation.ipynb  pyproject.toml  question_ba_similarity.py  result_analysis.ipynb  run_analysis.ipynb  run_bo_exp.ipynb  run_bo_sql.ipynb  run_bo_sql.py  run_evaluation.py  run_sql.ipynb  run_zeroshot.py  score_function_test.py  skip.sql  temp.ipynb  test-sparc-gemini.ipynb  test-sparc-gpt4.ipynb  test-tpch-gemini-withBO.ipynb  test-tpch-gemini.ipynb  test-tpch-gpt4-withBO.ipynb  test-tpch-gpt4.ipynb  test.ipynb  train_retrieval_model.py  usage-TPCH.ipynb  usage.ipynb
data/: bird_description.json  bird_dev.csv  bird_dev.json  bird_skip.txt  bird_test.json  bird_train.csv  bird_train.json  description.json  errors_bird.pkl  modified.md  spider_common_interest_dev.json  spider_dev.json  spider_test.json  spider_train.json
experiments/: spider_bo.jsonl  spider_bo_desc_c_test.jsonl  spider_bo_desc_c_train.jsonl  spider_bo_desc_t_test.jsonl  spider_bo_desc_t_train.jsonl  spider_bo_desc_train.jsonl  spider_dev_1.jsonl  spider_train_1.jsonl  spider_train_12.jsonl  spider_train_2.jsonl  spider_train_3.jsonl  spider_train_5.jsonl  spider_train_9.jsonl  sql_gen_hint_top1_3+_desc.jsonl  sql_gen_hint_top1_3+_descvt.jsonl  sql_gen_hint_top1_high_desc.jsonl  sql_gen_hint_top1_high_descvt.jsonl  sql_gen_hint_top1_low_desc.jsonl  sql_gen_hint_top1_low_descvt.jsonl  sql_gen_hint_top1_mid_desc.jsonl  sql_gen_hint_top1_mid_descvt.jsonl  sql_gen_hint_top3_1_descvt.jsonl  sql_gen_hint_top3_2_descvt.jsonl  sql_gen_hint_top3_3+_desc.jsonl  sql_gen_hint_top3_3+_descvt.jsonl  sql_gen_hint_top3_high_desc.jsonl  sql_gen_hint_top3_high_descvt.jsonl  sql_gen_hint_top3_low_desc.jsonl  sql_gen_hint_top3_low_descvt.jsonl  sql_gen_hint_top3_mid_desc.jsonl  sql_gen_hint_top3_mid_descvt.jsonl
figs/: overall.csv
scripts/: create_bird_bo.sh  create_spider_bo.sh  eval_valid_bo_bird_dev_30_40.sh  eval_valid_bo_bird_dev_50_60.sh  eval_valid_bo_bird_dev_70_80.sh  eval_zero_shot_spider_dev.sh  eval_zero_shot_spider_test.sh  experiment.md  predict_zero_shot_bird_dev.sh  (+15 more)
(+759 files in other folders)
