[project]
name = "businesslake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "langchain>=0.0.27",
    "langchain-openai>=0.1.23",
    "litellm>=1.44.22",
    "matplotlib>=3.9.2",
    "numpy>=2.1.1",
    "pydantic>=2.9.0",
    "tqdm>=4.66.5",
    "python-dotenv>=1.0.1",
    "pandas>=2.2.2",
    "torch>=2.4.1",
    "transformers>=4.44.2",
]
